--- a/src/app/layout/layout.css
+++ b/src/app/layout/layout.css
@@ -251,3 +251,12 @@
   width: 100px;
 }
 }
+.avatar-setting {
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    border: 2px solid #00e676;
+
+}
